<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hsr.mge.gadgeothek.LoginActivity"
    android:orientation="vertical"
    android:id="@+id/loginLayout">

    <EditText
        android:hint="Email"
        android:id="@+id/email"
        android:text="test@example.com"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"/>

    <EditText
        android:hint="password"
        android:id="@+id/password"
        android:text="test12"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Server Address"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spServerUrls">
    </Spinner>

    <Button
        android:text="sign-in"
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="Register"
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
